# Wisper-Clone

./: README.md  package-lock.json  package.json
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json  transcript.txt
src-tauri/src/: commands.rs  main.rs
src/components/: Icons.jsx
src/hooks/: usePushToTalk.js
src/utils/: audioRecorder.js  deepgramSocket.js  errorHandlers.js
