[package]
name = "wispr-clone"
version = "0.1.0"
description = "A Tauri App"
authors = ["Srushti Gadivaddar"]
edition = "2021"

[lib]
name = "wispr_clone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.1.3"
arboard = "3"
tauri-plugin-global-shortcut = "2.3.1"

